--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
      <nav>
         <div class="logo ">
-            <a href="https://www.ea.com/ea-sports-fc/ultimate-team/web-app/" target="_blank"><i class="fa-solid fa-2x fa-f"><i class="fa-solid fa-c"> <i class="fa-solid fa-2"><i class="fa-solid fa-4"></i></i></i></i></a>
+           <h1><a href="https://www.ea.com/ea-sports-fc/ultimate-team/web-app/" target="_blank">FC24</a></h1>
         </div>
         <div class="links">
             <ul>
@@ -27,11 +26,9 @@
             </ul>
         </div>
     </nav>    
-    <!-- Secton 1 -->
+    <!-- home  -->
         <section id="home" class=" s1">
           <div class="content0">
-            <!-- <h1><i class="fa-solid fa-futbol"></i> Welcome To FC Companion</h1>
-            <h3>Getting Started</h3> -->
             <div class="lol">
               <h1>  <span id="element"></span></h1>
               </div>
@@ -39,8 +36,8 @@
           <a href="https://www.ea.com/ea-sports-fc/ultimate-team/web-app/" target="_blank"> <button type="button" class="btn btn-outline-light m-2 px-3">Login</button></a>
           </div>
         </section>
-        <!-- section2 -->
-        <section id="Leaderboard">
+        <!-- Leaderboard -->
+        <section id="">
             <div class="container sec2">  
                 <div class="fst">
                   <h3>Leaderboard</h3>
@@ -357,7 +354,7 @@
           <section class="contact-area" id="contact">
             <div class="container">
               <div class="section-title">
-                <h2>Contact Us</h2>
+                <h2><a href="">Contact Us</a></h2>
               </div>
               <form>
                 <div class="labelss">
