--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
                 <li class="red"><a href="#home"><i class="fa-solid fa-2x fa-house"></i>Home</a></li>
                 <li><a href="#squads"><i class="fa-solid fa-2x fa-users"></i>Squads</a></li>
                 <li><a href="#Competions"><i class="fa-solid fa-2x fa-landmark"></i>Competions</a></li>
-                <!-- <li><a href="#Rewards"><i class="fa-solid fa-2x fa-handshake"></i>Rewards</a></li>
-                <li class="a"><a href="#Leaderboard"><i class="fa-solid fa-2x fa-list-check "></i>Leaderboard</a></li>
-                <li class="a"><a href="#"><i class="fa-solid fa-2x fa-store"></i>Store</a></li>
-                <li class="a"><a href="#contact"><i class="fa-solid fa-2x fa-headset"></i>ContactUs</a></li> -->
+                <li><a href="#Rewards"><i class="fa-solid fa-2x fa-handshake"></i>Rewards</a></li>
+                <li class="a"><a href="#contact"><i class="fa-solid fa-2x fa-headset"></i>ContactUs</a></li>
             </ul>
         </div>
     </nav>    
