--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <section id="squads">
             <div class="container1">
               <div class="fst"><h1>
-                <a href="">Our Squads</a></h1> <!-- مكسل والله اعمل افتر وبيفور -->                     
+                <a href="">Our Squads</a></h1>                  
               </div>
               <div class="list">
                 <ul>
@@ -310,7 +310,7 @@
                 </ul> 
               </div>
             <div class="container">
-              <div id="home" class=" home">
+              <div class="wqq">
                   <div id="carouselExampleCaptions" class="carousel slide">
                       <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
