--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </section>
             
           <!-- Squads -->
-          <section id="squads">
+          <section style="z-index: 99;" id="squads">
             <div class="container1">
               <div class="fst"><h1>
                 <a href="">Our Squads</a></h1>                  
