--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <div class="links">
             <ul>
                 <li class="red"><a href="#home"><i class="fa-solid fa-2x fa-house"></i>Home</a></li>
-                <li><a href="#squads"><i class="fa-solid fa-2x fa-users"></i>Squads</a></li>
+                
                 <li><a href="#Competions"><i class="fa-solid fa-2x fa-landmark"></i>Competions</a></li>
                 <li><a href="#Rewards"><i class="fa-solid fa-2x fa-handshake"></i>Rewards</a></li>
+                <li><a href="#squads"><i class="fa-solid fa-2x fa-users"></i>Squads</a></li>
                 <li class="a"><a href="#contact"><i class="fa-solid fa-2x fa-headset"></i>ContactUs</a></li>
             </ul>
         </div>
@@ -97,7 +98,7 @@
             </div>
           </section>
           <!-- Competions -->
-          <section id="Competions" class="competions bg-light pt-5" id="Competions">
+          <section id="Competions" class="competions bg-light" id="Competions">
             <div class="container overflow-hidden">
               <div class="text-center">
                 <h2 class="fw-bold fs-1">Competions</h2>
@@ -294,7 +295,7 @@
             </section>
             
           <!-- Squads -->
-          <section style="z-index: 99;" id="squads">
+          <section class="squads" style="z-index: 99;" id="squads">
             <div class="container1">
               <div class="fst"><h1>
                 <a href="">Our Squads</a></h1>                  
