--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="home" class=" s1">
           <div class="content0">
             <div class="lol">
-              <h1>  <span id="element"></span></h1>
+              <h1>  <span id="lol"></span></h1>
               </div>
             <a href="https://help.ea.com/in/help/ea/ea-app/order-history-status-info/"target="_blank"><button type="button" class="btn btn-outline-primary m-2">Purchase Now</button> </a>         
           <a href="https://www.ea.com/ea-sports-fc/ultimate-team/web-app/" target="_blank"> <button type="button" class="btn btn-outline-light m-2 px-3">Login</button></a>
@@ -171,7 +171,7 @@
                         Friendlies is a game mode within Ultimate Team that allows you to
                          play online or with friends. It is a fun and relaxed way to play 
                          FC 24. Play locally with your friends, or against the AI, from your 
-                         couch. Play matches against random opponents online.
+                         couch.
                       </p>
                     </div>
                   </div>
@@ -440,8 +440,8 @@
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
         <script>
-            var typed = new Typed('#element', {
-              strings: ['<i class="fa-solid fa-futbol"></i> Welcome To FC24 Companion ', 'Getting Started' ],
+            var typed = new Typed('#lol', {
+              strings: [`<i class="fa-solid fa-futbol"></i> Welcome To FC24 Companion `, 'Getting Started' ],
               typeSpeed: 50,
               backSpeed: 50,
               loop: true,
